--- a/frontend/signup.css
+++ b/frontend/signup.css
@@ -1,21 +1,5 @@
+body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box}
-
-/* @font-face {
-  font-family: Ubuntu-Regular;
-  src: url('../fonts/ubuntu/Ubuntu-Regular.ttf'); 
-}
-
-@font-face {
-  font-family: Ubuntu-Bold;
-  src: url('../fonts/ubuntu/Ubuntu-Bold.ttf'); 
-}
-
-@font-face {
-  font-family: JosefinSans-Bold;
-  src: url('../fonts/JosefinSans/JosefinSans-Bold.ttf'); 
-} */
-
-
 
 /* Full-width input fields */
   input[type=text], input[type=password] {
