--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -168,16 +168,22 @@ img {
 
 #mygroups{
     height: 40px;
-    width: 20%;
+    width: 100%;
     margin: 10px;
     background-color: #01204e00;
     color: white;
     border-radius: 10px;
 
     border: none;
-    font-size: 15px;
+    font-size: 20px;
 
     font-family: "Manrope";
+}
+
+#mygroups:hover{
+    background-color: dark green;
+    cursor: pointer;
+    transition: background-color 0.5s ease-in-out;
 }
 
 #profile{
