--- a/frontend/profiledisplay.css
+++ b/frontend/profiledisplay.css
@@ -11,6 +11,14 @@ img {
     max-width: 100%;
     height: auto;
 }
+hr {
+    font-family: "Manrope", "Outfit", sans-serif;
+  
+    border: 1px solid #f1f1f1;
+    
+    
+    margin-bottom: 25px;
+  } 
 
 #logo{
     height:80px;
@@ -26,17 +34,26 @@ img {
 
 
 #mygroups{
+    
+
     height: 40px;
-    width: 20%;
+    width: 100%;
     margin: 10px;
-    background-color: #01204e00;
+    background-color: transparent;  
     color: white;
     border-radius: 10px;
 
     border: none;
-    font-size: 15px;
+    font-size: 20px;
 
     font-family: "Manrope";
+    
+}
+
+#mygroups:hover{
+    background-color: dark green;
+    cursor: pointer;
+    /* transition: background-color 0.5s ease-in-out; */
 }
 
 #profile{
@@ -47,6 +64,72 @@ img {
     width: 50px;
     height: 50px;
     
+}
+img {
+    max-height: 300px;
+    max-width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }  
+
+.container {
+    
+        padding: 16px;
+        border: 2px solid #f1f1f1; /*Change the border width (e.g., 2px) to make it narrower */
+        width: 50%; /* Optional: adjust the container width */
+        max-width: 700px; /* Ensures it's not too wide */
+        height: 550px;
+        max-height: 100%;
+        margin: 0 auto; /* Center the box */
+        margin-top: 50 px;
+        /* margin-left: 50px;
+        margin-right: 50px; */
+        border-radius: 5%;
+        background-color: white;
+        * {
+            box-sizing: border-box;
+          }
+          
+          /* Create two equal columns that floats next to each other */
+          .column {
+            float: left;
+            width: 50%;
+            padding: 10px;
+          }
+          
+          /* Clear floats after the columns */
+          .row:after {
+            content: "";
+            display: table;
+            clear: both;    
+          }
+    
+  }
+
+  .container1{
+    padding: 20px;
+    border: none; /*Change the border width (e.g., 2px) to make it narrower */
+    width: 100%; /* Optional: adjust the container width */
+    max-width: 600px; /* Ensures it's not too wide */
+    margin: 0 auto; /*Center the box */
+    margin-top: 70 px;
+    /* margin-left: 300 px; */
+    border-radius: 5%;
+    display: flex;
+
+}
+
+.butt{
+    position: relative;
+    padding: 0.5em 2em;
+    border: 0;
+    border-radius: 0.5em;
+    background-color: #7ed957;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    margin-right:10px;
+    margin: 0 auto; 
 }
 
 .top-buttons{
@@ -76,5 +159,10 @@ header{
     padding: 0 15px;
     color: white;
     margin: 0px;
+    
+}
+
+header1{
+    margin: auto 0;
 }
 
