--- a/backend/filters/filters.css
+++ b/backend/filters/filters.css
@@ -1,13 +1,30 @@
 body{
     font-family: "Manrope", "Outfit", sans-serif;
     margin: 0;
-    height: 100%;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     display:flex;
+
+    background: linear-gradient(135deg, rgba(0, 0, 0, 1) 0%, rgba(78, 159, 61, 1) 50%, rgba(216, 233, 168, 1) 110%);
 }
 
 #filtersPanel h2{
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
+}
+
+#filtersPanel {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f0f0;
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+li{
+    margin: 5px;
 }
