--- a/frontend/profiledisplay.css
+++ b/frontend/profiledisplay.css
@@ -13,7 +13,7 @@ img {
 }
 hr {
     font-family: "Manrope", "Outfit", sans-serif;
-    
+  
     border: 1px solid #f1f1f1;
     
     
@@ -65,10 +65,6 @@ hr {
     height: 50px;
     
 }
-
-#profilepic{
-    max-width: 200px;
-}
 img {
     max-height: 300px;
     max-width: 300px;
@@ -78,15 +74,18 @@ img {
   }  
 
 .container {
-        margin: 20px;
+    
         padding: 16px;
         border: 2px solid #f1f1f1; /*Change the border width (e.g., 2px) to make it narrower */
-        width: 40%; /* Optional: adjust the container width */
+        width: 50%; /* Optional: adjust the container width */
         max-width: 700px; /* Ensures it's not too wide */
-        margin-left: auto;
-        margin-right: auto;
+        height: 550px;
+        max-height: 100%;
+        margin: 0 auto; /* Center the box */
+        margin-top: 50 px;
+        /* margin-left: 50px;
+        margin-right: 50px; */
         border-radius: 5%;
-        min-width: 50%;
         background-color: white;
         * {
             box-sizing: border-box;
@@ -119,10 +118,6 @@ img {
     border-radius: 5%;
     display: flex;
 
-}
-
-header1 h1{
-    padding: 10px;
 }
 
 .butt{
